--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -18,6 +18,7 @@ html, body {
 .logo-container {
     padding-top: 10px;
     padding-left: 30px;
+    cursor: pointer;
 }
 .logo-icon i {
   color: #1589FF;
