--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -4,6 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: #1a2020;
 }
 .images img {
     position: absolute;
